; ModuleID = '/home/carl/AnghaBench/streem/src/extr_number.c_num_mod.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_number.c_num_mod.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"Ni\00", align 1
@STRM_OK = common dso_local global i32 0, align 4
@STRM_NG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*, i32*)* @num_mod to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @num_mod(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = load i32*, i32** %8, align 8
  %15 = call i32 @strm_get_args(i32* %12, i32 %13, i32* %14, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32* %10, i32* %11)
  %16 = load i32, i32* %10, align 4
  %17 = call i64 @strm_int_p(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %27

19:                                               ; preds = %4
  %20 = load i32, i32* %10, align 4
  %21 = call i32 @strm_value_int(i32 %20)
  %22 = load i32, i32* %11, align 4
  %23 = srem i32 %21, %22
  %24 = call i32 @strm_int_value(i32 %23)
  %25 = load i32*, i32** %9, align 8
  store i32 %24, i32* %25, align 4
  %26 = load i32, i32* @STRM_OK, align 4
  store i32 %26, i32* %5, align 4
  br label %41

27:                                               ; preds = %4
  %28 = load i32, i32* %10, align 4
  %29 = call i64 @strm_float_p(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %39

31:                                               ; preds = %27
  %32 = load i32, i32* %10, align 4
  %33 = call i32 @strm_value_float(i32 %32)
  %34 = load i32, i32* %11, align 4
  %35 = call i32 @fmod(i32 %33, i32 %34)
  %36 = call i32 @strm_float_value(i32 %35)
  %37 = load i32*, i32** %9, align 8
  store i32 %36, i32* %37, align 4
  %38 = load i32, i32* @STRM_OK, align 4
  store i32 %38, i32* %5, align 4
  br label %41

39:                                               ; preds = %27
  %40 = load i32, i32* @STRM_NG, align 4
  store i32 %40, i32* %5, align 4
  br label %41

41:                                               ; preds = %39, %31, %19
  %42 = load i32, i32* %5, align 4
  ret i32 %42
}

declare dso_local i32 @strm_get_args(i32*, i32, i32*, i8*, i32*, i32*) #1

declare dso_local i64 @strm_int_p(i32) #1

declare dso_local i32 @strm_int_value(i32) #1

declare dso_local i32 @strm_value_int(i32) #1

declare dso_local i64 @strm_float_p(i32) #1

declare dso_local i32 @strm_float_value(i32) #1

declare dso_local i32 @fmod(i32, i32) #1

declare dso_local i32 @strm_value_float(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
